--- a/index.css
+++ b/index.css
@@ -1,3 +1,14 @@
 html,body,#root {width:100%;height:100%;background:#000;font-family:sans-serif;margin:0;color:white;}
 #watermark {position:fixed;font-weight:bolder; bottom:8px;right:16px;font-size:14px;opacity:0.4;display:inline-block;}
 #watermark::after {content:"infinitepacertest | by rare1k";}
+#beforeplay {
+    width:100%;z-index:10000;position: fixed;top:0;left:0;height:100%;margin:0; background:#444;color:#eee;
+    display:flex; justify-content: center; align-items: center; flex-direction: column;
+}
+#beforeplay button {
+    padding:2px;
+    transition: all 0.15s; padding-left:15px; padding-right:15px; background:#999; border:3px #aaa outset; font-size:18px; color:black;
+}
+#beforeplay button:hover {
+    border:3px #bbb inset; background:#888;transition: all 0.15s;
+}
