--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-html,body,#root{width:100%; height:100%; background:#000;font-family:sans-serif;margin:0;color:white;}
+html,body,#root{overflow-y:hidden;width:100%; height:100%; background:#000;font-family:sans-serif;margin:0;color:white;}
 #base {aspect-ratio: 4 / 3 !important;   background-color:#1f1f1f;width:100vw;height:100vh;display:block;}
 
 #watermark {position:fixed;font-weight:bolder; bottom:8px;right:16px;font-size:14px;opacity:0.4;display:inline-block;}
