--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 html,body,#root{overflow-y:hidden;width:100%; height:100%; background:#000;font-family:sans-serif;margin:0;color:white;}
 #base {aspect-ratio: 4 / 3 !important;   background-color:#1f1f1f;width:100vw;height:100vh;display:block;}
 
-#watermark {position:fixed;font-weight:bolder; bottom:8px;right:16px;font-size:14px;opacity:0.4;display:inline-block;}
+#watermark {padding:8px;backdrop-filter: blur(7px) brightness(0.7);border-radius:6px;position:fixed;font-weight:bolder; bottom:8px;right:16px;font-size:14px;;display:inline-block;color:#aaa}
 #watermark::after {content:"infinitepacertest | by rare1k";}
 #beforeplay {
     width:100%;z-index:10000;position: fixed;top:0;left:0;height:100%;margin:0; background:#444;color:#eee;
