--- a/index.css
+++ b/index.css
@@ -1,8 +1,9 @@
 html,body,#root{overflow-y:hidden;width:100%; height:100%; background:#000;font-family:sans-serif;margin:0;color:white;}
 #base {aspect-ratio: 4 / 3 !important;   background-color:#1f1f1f;width:100vw;height:100vh;display:block;}
 
-#watermark {padding:8px;backdrop-filter: blur(7px) brightness(0.7);border-radius:6px;position:fixed;font-weight:bolder; bottom:8px;right:16px;font-size:14px;;display:inline-block;color:#aaa}
+#watermark {box-shadow:0px 0px -9px rgba(0,0,0,0.5); transition:all 0.5s; padding:8px;backdrop-filter: blur(7px) brightness(0.7);border-radius:6px;position:fixed;font-weight:bolder; bottom:8px;right:16px;font-size:14px;;display:inline-block;color:#aaa}
 #watermark::after {content:"infinitepacertest | by rare1k";}
+#watermark:hover {bottom:12px;transition:all 0.5s;;box-shadow:3px 3px 16px rgba(0,0,0,0.3);color:#eee;backdrop-filter: blur(12px) brightness(0.4);}
 #beforeplay {
     width:100%;z-index:10000;position: fixed;top:0;left:0;height:100%;margin:0; background:#444;color:#eee;
     display:flex; justify-content: center; align-items: center; flex-direction: column;
